--- a/contact.html
+++ b/contact.html
@@ -161,6 +161,39 @@
         </div>
     </section>
 
+    <!-- Google Maps Section -->
+    <section class="map-section">
+        <div class="map-container">
+            <h2 class="section-title">Find Us on the Map</h2>
+            <p class="map-subtitle">Visit our sanctuary in Greater Noida</p>
+            <div class="map-wrapper">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.8234567890123!2d77.64033!3d28.47289!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cee3b8b8b8b8b%3A0x8b8b8b8b8b8b8b8b!2sSector%20144%2C%20Greater%20Noida%2C%20Uttar%20Pradesh%20201306!5e0!3m2!1sen!2sin!4v1234567890123" 
+                    width="100%" 
+                    height="450" 
+                    style="border:0; border-radius: 12px;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+            <div class="map-info">
+                <div class="map-info-item">
+                    <h3>📍 Our Location</h3>
+                    <p>Neem Karori Baba Gau Seva<br>Sector-144, Greater Noida<br>Uttar Pradesh - 201306<br>India</p>
+                </div>
+                <div class="map-info-item">
+                    <h3>⏰ Visiting Hours</h3>
+                    <p>Monday - Sunday<br>10:00 AM - 5:00 PM<br><br>Please call ahead to schedule a visit.</p>
+                </div>
+                <div class="map-info-item">
+                    <h3>🚗 How to Reach</h3>
+                    <p>By Car: 45 mins from Delhi<br>By Train: Nearest station - Greater Noida<br>By Bus: Direct buses available from Delhi</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Bottom Action Bar -->
     <div class="bottom-action-bar">
         <button class="action-box-btn action-donate-btn-bottom" data-modal="donate-modal">
