--- a/donate.html
+++ b/donate.html
@@ -32,8 +32,8 @@
     <!-- Page Header -->
     <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
-            <h1>Make a Difference</h1>
-            <p>Your Contribution Can Save a Life Today</p>
+            <h1>Make a Donation</h1>
+            <p>Support Our Mission to Save Cows</p>
         </div>
     </section>
 
