--- a/donate.html
+++ b/donate.html
@@ -276,29 +276,58 @@
         </div>
     </div>
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
         let donors = JSON.parse(localStorage.getItem('donors')) || [];
+        const API_BASE = (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") ? "http://localhost:3000" : ""; 
 
         function displayDonors() {
             const donorsDisplay = document.getElementById('donors-display');
             const noDonorsMessage = document.getElementById('no-donors');
 
-            if (donors.length === 0) {
-                donorsDisplay.innerHTML = '';
-                noDonorsMessage.style.display = 'block';
-                return;
-            }
+            // Try fetching donors from server (if backend running), otherwise fallback to localStorage
+            fetch(API_BASE + '/api/donors')
+                .then(res => res.json())
+                .then(serverDonors => {
+                    donors = serverDonors || [];
 
-            noDonorsMessage.style.display = 'none';
-            donorsDisplay.innerHTML = donors.map(donor => `
-                <div class="donor-card">
-                    <div class="donor-avatar">${donor.name.charAt(0).toUpperCase()}</div>
-                    <h4>${donor.name}</h4>
-                    <p class="donor-amount">${donor.amount}</p>
-                    <p class="donor-campaign">${donor.campaign}</p>
-                    <p class="donor-date">${donor.date}</p>
-                </div>
-            `).join('');
+                    if (donors.length === 0) {
+                        donorsDisplay.innerHTML = '';
+                        noDonorsMessage.style.display = 'block';
+                        return;
+                    }
+
+                    noDonorsMessage.style.display = 'none';
+                    donorsDisplay.innerHTML = donors.map(donor => `
+                        <div class="donor-card">
+                            <div class="donor-avatar">${donor.name.charAt(0).toUpperCase()}</div>
+                            <h4>${donor.name}</h4>
+                            <p class="donor-amount">${donor.amount}</p>
+                            <p class="donor-campaign">${donor.campaign}</p>
+                            <p class="donor-date">${donor.date}</p>
+                        </div>
+                    `).join('');
+                })
+                .catch(() => {
+                    // Fallback to localStorage
+                    donors = JSON.parse(localStorage.getItem('donors')) || [];
+                    if (donors.length === 0) {
+                        donorsDisplay.innerHTML = '';
+                        noDonorsMessage.style.display = 'block';
+                        return;
+                    }
+
+                    noDonorsMessage.style.display = 'none';
+                    donorsDisplay.innerHTML = donors.map(donor => `
+                        <div class="donor-card">
+                            <div class="donor-avatar">${donor.name.charAt(0).toUpperCase()}</div>
+                            <h4>${donor.name}</h4>
+                            <p class="donor-amount">${donor.amount}</p>
+                            <p class="donor-campaign">${donor.campaign}</p>
+                            <p class="donor-date">${donor.date}</p>
+                        </div>
+                    `).join('');
+                });
         }
 
         function selectDonation(type) {
@@ -367,20 +396,75 @@
                 return;
             }
 
-            const donor = {
-                name: name,
-                amount: amount,
-                campaign: campaign,
-                date: new Date().toLocaleDateString('en-IN')
-            };
+            const rupees = parseInt(String(amount).replace(/[^\d]/g,''), 10);
+            if (!rupees || isNaN(rupees)) {
+                alert('Invalid donation amount');
+                return;
+            }
+            const amountInPaise = rupees * 100;
 
-            donors.unshift(donor);
-            localStorage.setItem('donors', JSON.stringify(donors));
-
-            alert(`Thank you ${name}! Your donation of ${amount} has been recorded. 🙏`);
-            nameInput.value = '';
-            emailInput.value = '';
-            closeModal(type + '-modal');
+            // Create order on server
+            fetch(API_BASE + '/api/create-order', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ amount: amountInPaise, currency: 'INR', name, email, campaign })
+            })
+            .then(res => res.json())
+            .then(order => {
+                if (!order || order.error) {
+                    alert('Could not create payment order. Please try UPI or contact support.');
+                    return;
+                }
+                const options = {
+                    key: order.key,
+                    amount: order.amount,
+                    currency: order.currency,
+                    name: 'GaoShala',
+                    description: campaign,
+                    order_id: order.id,
+                    prefill: { name, email },
+                    handler: function (response) {
+                        // Verify payment on server
+                        fetch(API_BASE + '/api/verify-payment', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({
+                                razorpay_payment_id: response.razorpay_payment_id,
+                                razorpay_order_id: response.razorpay_order_id,
+                                razorpay_signature: response.razorpay_signature,
+                                name, email, amount: rupees, campaign
+                            })
+                        })
+                        .then(res => res.json())
+                        .then(data => {
+                            if (data && data.success) {
+                                alert(`Thank you ${name}! Your payment of ₹${rupees} was successful. 🙏`);
+                                nameInput.value = '';
+                                emailInput.value = '';
+                                closeModal(type + '-modal');
+                                if (typeof displayDonors === 'function') displayDonors();
+                            } else {
+                                alert('Payment verification failed. If you were charged, please contact support.');
+                            }
+                        })
+                        .catch(err => {
+                            console.error(err);
+                            alert('Verification request failed. Please contact support if you were charged.');
+                        });
+                    },
+                    modal: {
+                        ondismiss: function() {
+                            console.log('Payment popup closed');
+                        }
+                    }
+                };
+                const rzp = new Razorpay(options);
+                rzp.open();
+            })
+            .catch(err => {
+                console.error(err);
+                alert('Failed to initiate payment. Try again or use UPI.');
+            });
         }
 
         document.querySelectorAll('.action-box-btn').forEach(button => {
