--- a/index.html
+++ b/index.html
@@ -429,9 +429,11 @@
         </button>
     </div>
 
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script>
         // Donor storage
         let donors = JSON.parse(localStorage.getItem('donors')) || [];
+        const API_BASE = (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") ? "http://localhost:3000" : "";
 
         // Modal Functions
         function openModal(modalId) {
@@ -453,6 +455,11 @@
         // Donation Completion
         function completeDonation(type, amount, campaign) {
             let nameInput, emailInput;
+            
+            if (window.currentDonationType) {
+                amount = window.currentDonationType.amount;
+                campaign = window.currentDonationType.campaign;
+            }
             
             switch(type) {
                 case 'donate':
@@ -477,36 +484,99 @@
                 return;
             }
 
-            // Add to donors list
-            const donor = {
-                name: name,
-                amount: amount,
-                campaign: campaign,
-                date: new Date().toLocaleDateString('en-IN')
-            };
-
-            donors.unshift(donor);
-            localStorage.setItem('donors', JSON.stringify(donors));
-
-            // Update certificate
-            document.getElementById('certName').textContent = name;
-            document.getElementById('certAmount').textContent = 'Amount: ' + amount;
-            document.getElementById('certDate').textContent = donor.date;
-
-            // Store donation details for sharing
-            window.currentDonation = donor;
-            window.donorEmail = email;
-
-            // Close current modal and show success
-            const currentModal = document.querySelector('.modal.active');
-            if (currentModal) {
-                currentModal.classList.remove('active');
+            const rupees = parseInt(String(amount).replace(/[^\d]/g,''), 10);
+            if (!rupees || isNaN(rupees)) {
+                alert('Invalid donation amount');
+                return;
             }
+            const amountInPaise = rupees * 100;
 
-            setTimeout(() => {
-                openModal('success-modal');
-                updateDonorsDisplay();
-            }, 300);
+            // Create order on server
+            fetch(API_BASE + '/api/create-order', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ amount: amountInPaise, currency: 'INR', name, email, campaign })
+            })
+            .then(res => res.json())
+            .then(order => {
+                if (!order || order.error) {
+                    alert('Could not create payment order. Please try UPI or contact support.');
+                    return;
+                }
+                const options = {
+                    key: order.key,
+                    amount: order.amount,
+                    currency: order.currency,
+                    name: 'GaoShala',
+                    description: campaign,
+                    order_id: order.id,
+                    prefill: { name, email },
+                    handler: function (response) {
+                        // Verify payment on server
+                        fetch(API_BASE + '/api/verify-payment', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({
+                                razorpay_payment_id: response.razorpay_payment_id,
+                                razorpay_order_id: response.razorpay_order_id,
+                                razorpay_signature: response.razorpay_signature,
+                                name, email, amount: rupees, campaign
+                            })
+                        })
+                        .then(res => res.json())
+                        .then(data => {
+                            if (data && data.success) {
+                                const donor = {
+                                    name: name,
+                                    amount: '₹ ' + rupees,
+                                    campaign: campaign,
+                                    date: new Date().toLocaleDateString('en-IN')
+                                };
+
+                                donors.unshift(donor);
+                                localStorage.setItem('donors', JSON.stringify(donors));
+
+                                // Update certificate
+                                document.getElementById('certName').textContent = name;
+                                document.getElementById('certAmount').textContent = 'Amount: ' + '₹ ' + rupees;
+                                document.getElementById('certDate').textContent = donor.date;
+
+                                // Store donation details for sharing
+                                window.currentDonation = donor;
+                                window.donorEmail = email;
+
+                                // Close current modal and show success
+                                const currentModal = document.querySelector('.modal.active');
+                                if (currentModal) {
+                                    currentModal.classList.remove('active');
+                                }
+
+                                setTimeout(() => {
+                                    openModal('success-modal');
+                                    updateDonorsDisplay();
+                                }, 300);
+                            } else {
+                                alert('Payment verification failed. If you were charged, please contact support.');
+                            }
+                        })
+                        .catch(err => {
+                            console.error(err);
+                            alert('Verification request failed. Please contact support if you were charged.');
+                        });
+                    },
+                    modal: {
+                        ondismiss: function() {
+                            console.log('Payment popup closed');
+                        }
+                    }
+                };
+                const rzp = new Razorpay(options);
+                rzp.open();
+            })
+            .catch(err => {
+                console.error(err);
+                alert('Failed to initiate payment. Try again or use UPI.');
+            });
         }
 
         // Update donors display
